Install .gitconfig and global .gitignore

--- a/script/install
+++ b/script/install
@@ -18,6 +18,8 @@ ln -s "$SRC/Xdefaults" "$DST/.Xdefaults"
 ln -s "$SRC/Xdefaults.theme" "$DST/.Xdefaults.theme"
 ln -s "$SRC/bash" "$DST/.bash"
 ln -s "$SRC/bashrc" "$DST/.bashrc"
+ln -s "$SRC/gitconfig" "$DST/.gitconfig"
+ln -s "$SRC/gitignore" "$DST/.gitignore"
 ln -s "$SRC/vim" "$DST/.config/nvim"
 ln -s "$SRC/vim" "$DST/.vim"
 ln -s "$SRC/vim/vimrc" "$DST/.vimrc"
