Replace conky bar with polybar

--- a/script/install
+++ b/script/install
@@ -37,11 +37,11 @@ if [ "$OSTYPE" == "linux-gnu" ]; then
 	inst "$SRC/Xdefaults" "$DST/.Xdefaults"
 	inst "$SRC/autostart" "$DST/.config/autostart"
 	inst "$SRC/compton.conf" "$DST/.config/compton.conf"
-	inst "$SRC/conky" "$DST/.config/conky"
 	inst "$SRC/fontconfig" "$DST/.config/fontconfig"
 	inst "$SRC/i3" "$DST/.config/i3"
 	inst "$SRC/icons" "$DST/.icons"
 	inst "$SRC/mpd" "$DST/.config/mpd"
+	inst "$SRC/polybar" "$DST/.config/polybar"
 	inst "$SRC/rofi" "$DST/.config/rofi"
 	inst "$SRC/xbindkeysrc" "$DST/.xbindkeysrc"
 	inst "$SRC/xprofile" "$DST/.xprofile"
