Use vi keybindings in readline

--- a/script/install
+++ b/script/install
@@ -26,6 +26,8 @@ inst "$SRC/bash" "$DST/.bash"
 inst "$SRC/bashrc" "$DST/.bashrc"
 inst "$SRC/gitconfig" "$DST/.gitconfig"
 inst "$SRC/gitignore" "$DST/.gitignore"
+inst "$SRC/inputrc" "$DST/.inputrc"
+inst "$SRC/tmux.conf" "$DST/.tmux.conf"
 inst "$SRC/vim" "$DST/.config/nvim"
 inst "$SRC/vim" "$DST/.vim"
 inst "$SRC/vim/vimrc" "$DST/.vimrc"
