kak: Add kakoune config

--- a/script/install
+++ b/script/install
@@ -32,6 +32,7 @@ inst "$SRC/vim" "$DST/.config/nvim"
 inst "$SRC/vim" "$DST/.vim"
 inst "$SRC/vim/vimrc" "$DST/.vimrc"
 inst "$SRC/tmux.conf" "$DST/.tmux.conf"
+inst "$SRC/kak" "$DST/.config/kak"
 
 ### Linux only
 if [ "$OSTYPE" == "linux-gnu" ]; then
