emacs: Reset with viper

--- a/script/install
+++ b/script/install
@@ -31,6 +31,7 @@ inst "$SRC/gitignore" "$DST/.gitignore"
 inst "$SRC/inputrc" "$DST/.inputrc"
 inst "$SRC/tmux.conf" "$DST/.tmux.conf"
 inst "$SRC/vim" "$DST/.config/nvim"
+inst "$SRC/emacs.d" "$DST/.emacs.d"
 inst "$SRC/tmux.conf" "$DST/.tmux.conf"
 inst "$SRC/alacritty/alacritty.yml" "$DST/.config/alacritty/alacritty.yml"
 inst "$SRC/starship.toml" "$DST/.config/starship.toml"
