emacs: Switch to DOOM
Since I use emacs mainly for org-mode, I'm not going to bother learning
to customize and set up a whole bunch of stuff. Doom has a lot of things
already figured out and has sane defaults with evil mode.

--- a/script/install
+++ b/script/install
@@ -26,6 +26,7 @@ DST="$HOME"
 inst "$SRC/alacritty/alacritty.yml" "$DST/.config/alacritty/alacritty.yml"
 inst "$SRC/bash" "$DST/.bash"
 inst "$SRC/bashrc" "$DST/.bashrc"
+inst "$SRC/doom" "$DST/.config/doom"
 inst "$SRC/emacs.d" "$DST/.emacs.d"
 inst "$SRC/fish" "$DST/.config/fish"
 inst "$SRC/gitconfig" "$DST/.gitconfig"
@@ -33,7 +34,6 @@ inst "$SRC/gitignore" "$DST/.gitignore"
 inst "$SRC/inputrc" "$DST/.inputrc"
 inst "$SRC/nixpkgs" "$DST/.config/nixpkgs"
 inst "$SRC/starship.toml" "$DST/.config/starship.toml"
-inst "$SRC/tmux.conf" "$DST/.tmux.conf"
 inst "$SRC/tmux.conf" "$DST/.tmux.conf"
 inst "$SRC/vim" "$DST/.config/nvim"
 
