kitty: Add Kitty config

--- a/script/install
+++ b/script/install
@@ -32,6 +32,7 @@ inst "$SRC/fish" "$DST/.config/fish"
 inst "$SRC/gitconfig" "$DST/.gitconfig"
 inst "$SRC/gitignore" "$DST/.gitignore"
 inst "$SRC/inputrc" "$DST/.inputrc"
+inst "$SRC/kitty" "$DST/.config/kitty"
 inst "$SRC/nixpkgs" "$DST/.config/nixpkgs"
 inst "$SRC/starship.toml" "$DST/.config/starship.toml"
 inst "$SRC/tmux.conf" "$DST/.tmux.conf"
