--- a/script/install
+++ b/script/install
@@ -24,6 +24,10 @@ DST="$HOME"
 [ ! -d "$DST/.config" ] && mkdir -p "$DST/.config"
 
 inst "$SRC/alacritty/alacritty.yml" "$DST/.config/alacritty/alacritty.yml"
+inst "$SRC/asdf/default-cargo-crates" "$DST/.default-cargo-crates"
+inst "$SRC/asdf/default-golang-pkgs" "$DST/.default-golang-pkgs"
+inst "$SRC/asdf/default-npm-packages" "$DST/.default-npm-packages"
+inst "$SRC/asdf/default-python-packages" "$DST/.default-python-packages"
 inst "$SRC/bash" "$DST/.bash"
 inst "$SRC/bashrc" "$DST/.bashrc"
 inst "$SRC/doom" "$DST/.config/doom"
